fix(ui): updated card spacing

--- a/eds/blocks/cards/cards.css
+++ b/eds/blocks/cards/cards.css
@@ -18,7 +18,6 @@
     h3 {
       font-size: var(--title-size);
       line-height: 1.375;
-      margin-block-end: 0;
       font-weight: 400;
       margin-block-end: var(--space-2);
     }
